; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/melody96/keymaps/konstantin/extr_keymap.c_eeconfig_init_keymap.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/melody96/keymaps/konstantin/extr_keymap.c_eeconfig_init_keymap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@colors = common dso_local global %struct.TYPE_2__** null, align 8
@cidx = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @eeconfig_init_keymap() #0 {
  %1 = load %struct.TYPE_2__**, %struct.TYPE_2__*** @colors, align 8
  %2 = load i64, i64* @cidx, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %1, i64 %2
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.TYPE_2__**, %struct.TYPE_2__*** @colors, align 8
  %8 = load i64, i64* @cidx, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %7, i64 %8
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.TYPE_2__**, %struct.TYPE_2__*** @colors, align 8
  %14 = load i64, i64* @cidx, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %13, i64 %14
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @rgblight_sethsv(i32 %6, i32 %12, i32 %18)
  ret void
}

declare dso_local i32 @rgblight_sethsv(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
